Fix responsive issues on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1158,3 +1158,9 @@
   content: '#';
   display: block;
 }
+
+@media (max-width: 700px) {
+  .article .metadata {
+    padding-top: 3.5rem;
+  }
+}
